debugged layout issue checkout app 3

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -186,3 +186,16 @@ footer .cv-pdf i:hover {
 .navbar-default .navbar-nav > li > a{
     color: white; 
 }
+
+.glyphicon {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 14px;
+}
